# whachadoin

./: .env.example  .gitignore  justfile  pyproject.toml
src/api/: main.py  settings.py  test_main.py
src/api/routers/: health_router.py
