[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Timothy Storm", email = "timothystorm@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.2",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.fastapi]
entrypoint = "src.api.main:app"

